--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<!-- Шапка ==========================================================-->
 		<header class="header">
 			<div class="header__body">
-				<a href="/index.html" class="header__logo">
+				<a href="index.html" class="header__logo">
 
 					<img src="./img/Logo.png" alt="Logo">
 					<h2>DiscountsOnServices</h2>
@@ -95,7 +95,7 @@
 									</defs>
 								</svg>
 
-							</div><a href="/index.html">Home</a>
+							</div><a href="index.html">Home</a>
 						</li>
 
 					</ul>
