--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<!-- Шапка ==========================================================-->
 		<header class="header">
 			<div class="header__body">
-				<a href="/discounts/index.html.html" class="header__logo">
+				<a href="/discounts/index.html" class="header__logo">
 
 					<img src="./img/Logo.png" alt="Logo">
 					<h2>DiscountsOnServices</h2>
