--- a/faq-page.html
+++ b/faq-page.html
@@ -27,33 +27,51 @@
 				</a>
 		
 				<ul class="header__list">
-					<li>
-						<a href="#">Subscriptions <img src="./img/arrow-down-s-line.svg" alt=""></a>
-					</li>
-					<li class="headerBurgerItem"><a href="/discounts/faq-page.html">FAQ</a></li>
-					<li class="headerBurgerItem"><a href="#">Support</a></li>
-					<li class="headerBurgerItem"><a href="#">About</a></li>
+		
+					<div class="dropdown-case">
+						<button class="dropdownBtn" onclick="show_list()">
+							Subscriptions
+						</button>
+		
+						<div id="dropdown-list" class="dropdownList">
+							<a href="/discounts/netflix-service.html">Netflix</a>
+							<a href="/discounts/youtube-service.html">YouTube Premium</a>
+							<a href="/discounts/spotify-service.html">Spotify</a>
+						</div>
+					</div>
+		
+		
+					<li><a href="/discounts/faq-page.html">FAQ</a></li>
+					<li><a href="">Support</a></li>
+					<li><a href="">About</a></li>
 				</ul>
+		
 		
 		
 		
 		
 				<div class="header-list-app">
 					<ul class="navigation-list-app">
+		
+		
 						<li>
-							<div class="navigation-ico"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+							<div class="navigation-ico"><svg width="20" height="20" viewBox="0 0 18 20" fill="none"
 									xmlns="http://www.w3.org/2000/svg">
-									<g clip-path="url(#clip0_295_2314)">
-										<path
-											d="M19.2727 20.0839C19.2727 20.3269 19.177 20.5599 19.0065 20.7317C18.836 20.9035 18.6047 21 18.3636 21H5.63636C5.39526 21 5.16403 20.9035 4.99354 20.7317C4.82305 20.5599 4.72727 20.3269 4.72727 20.0839V11.8389H2L11.3882 3.23852C11.5556 3.08505 11.7737 3 12 3C12.2263 3 12.4444 3.08505 12.6118 3.23852L22 11.8389H19.2727V20.0839ZM9.27273 10.9228V16.4195H14.7273V10.9228H9.27273ZM11.0909 12.755H12.9091V14.5873H11.0909V12.755Z"
-											fill="#9C99AD" />
-									</g>
-									<defs>
-										<clipPath id="clip0_295_2314">
-											<rect width="24" height="24" fill="white" />
-										</clipPath>
-									</defs>
-								</svg></div><a href="/discounts/faq-page.html">FAQ</a>
+									<path
+										d="M17 20H1C0.734784 20 0.48043 19.8946 0.292893 19.7071C0.105357 19.5196 0 19.2652 0 19V6H18V19C18 19.2652 17.8946 19.5196 17.7071 19.7071C17.5196 19.8946 17.2652 20 17 20ZM18 4H0V1C0 0.734784 0.105357 0.48043 0.292893 0.292893C0.48043 0.105357 0.734784 0 1 0H17C17.2652 0 17.5196 0.105357 17.7071 0.292893C17.8946 0.48043 18 0.734784 18 1V4ZM4 9V13H8V9H4ZM4 15V17H14V15H4ZM10 10V12H14V10H10Z"
+										fill="#9C99AD" />
+								</svg>
+							</div><a href="">Support</a>
+						</li>
+		
+						<li>
+							<div class="navigation-ico"><svg width="20" height="20" viewBox="0 0 20 20" fill="none"
+									xmlns="http://www.w3.org/2000/svg">
+									<path
+										d="M10 20C4.477 20 0 15.523 0 10C0 4.477 4.477 0 10 0C15.523 0 20 4.477 20 10C20 15.523 15.523 20 10 20ZM9 13V15H11V13H9ZM11 11.355C11.8037 11.1128 12.4936 10.59 12.9442 9.88174C13.3947 9.17353 13.5759 8.32705 13.4547 7.49647C13.3336 6.66588 12.9181 5.90644 12.284 5.35646C11.6499 4.80647 10.8394 4.50254 10 4.5C9.19085 4.49994 8.40666 4.78015 7.78079 5.29299C7.15492 5.80583 6.72601 6.51963 6.567 7.313L8.529 7.706C8.58468 7.42743 8.71832 7.1704 8.91437 6.96482C9.11042 6.75923 9.36081 6.61354 9.63643 6.54471C9.91204 6.47587 10.2015 6.48671 10.4712 6.57597C10.7409 6.66523 10.9797 6.82924 11.1598 7.04891C11.34 7.26858 11.454 7.53489 11.4887 7.81684C11.5234 8.0988 11.4773 8.3848 11.3558 8.64158C11.2343 8.89837 11.0423 9.11536 10.8023 9.26733C10.5623 9.4193 10.2841 9.49998 10 9.5C9.73478 9.5 9.48043 9.60536 9.29289 9.79289C9.10536 9.98043 9 10.2348 9 10.5V12H11V11.355Z"
+										fill="#9C99AD" />
+								</svg>
+							</div><a href="/discounts/faq-page.html">FAQ</a>
 						</li>
 		
 						<li>
@@ -69,38 +87,38 @@
 											<rect width="24" height="24" fill="white" />
 										</clipPath>
 									</defs>
-								</svg></div><a href="#">Support</a>
+								</svg>
+		
+							</div><a href="">About</a>
 						</li>
 		
 						<li>
-							<div class="navigation-ico"><svg width="20" height="20" viewBox="0 0 20 20" fill="none"
+							<div class="navigation-ico"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
 									xmlns="http://www.w3.org/2000/svg">
-									<path
-										d="M10 20C4.477 20 0 15.523 0 10C0 4.477 4.477 0 10 0C15.523 0 20 4.477 20 10C20 15.523 15.523 20 10 20ZM9 13V15H11V13H9ZM11 11.355C11.8037 11.1128 12.4936 10.59 12.9442 9.88174C13.3947 9.17353 13.5759 8.32705 13.4547 7.49647C13.3336 6.66588 12.9181 5.90644 12.284 5.35646C11.6499 4.80647 10.8394 4.50254 10 4.5C9.19085 4.49994 8.40666 4.78015 7.78079 5.29299C7.15492 5.80583 6.72601 6.51963 6.567 7.313L8.529 7.706C8.58468 7.42743 8.71832 7.1704 8.91437 6.96482C9.11042 6.75923 9.36081 6.61354 9.63643 6.54471C9.91204 6.47587 10.2015 6.48671 10.4712 6.57597C10.7409 6.66523 10.9797 6.82924 11.1598 7.04891C11.34 7.26858 11.454 7.53489 11.4887 7.81684C11.5234 8.0988 11.4773 8.3848 11.3558 8.64158C11.2343 8.89837 11.0423 9.11536 10.8023 9.26733C10.5623 9.4193 10.2841 9.49998 10 9.5C9.73478 9.5 9.48043 9.60536 9.29289 9.79289C9.10536 9.98043 9 10.2348 9 10.5V12H11V11.355Z"
-										fill="#9C99AD" />
+									<g clip-path="url(#clip0_295_2314)">
+										<path
+											d="M19.2727 20.0839C19.2727 20.3269 19.177 20.5599 19.0065 20.7317C18.836 20.9035 18.6047 21 18.3636 21H5.63636C5.39526 21 5.16403 20.9035 4.99354 20.7317C4.82305 20.5599 4.72727 20.3269 4.72727 20.0839V11.8389H2L11.3882 3.23852C11.5556 3.08505 11.7737 3 12 3C12.2263 3 12.4444 3.08505 12.6118 3.23852L22 11.8389H19.2727V20.0839ZM9.27273 10.9228V16.4195H14.7273V10.9228H9.27273ZM11.0909 12.755H12.9091V14.5873H11.0909V12.755Z"
+											fill="#9C99AD" />
+									</g>
+									<defs>
+										<clipPath id="clip0_295_2314">
+											<rect width="24" height="24" fill="white" />
+										</clipPath>
+									</defs>
 								</svg>
-							</div><a href="#">About</a>
-						</li>
 		
-						<li>
-							<div class="navigation-ico"><svg width="18" height="20" viewBox="0 0 18 20" fill="none"
-									xmlns="http://www.w3.org/2000/svg">
-									<path
-										d="M17 20H1C0.734784 20 0.48043 19.8946 0.292893 19.7071C0.105357 19.5196 0 19.2652 0 19V6H18V19C18 19.2652 17.8946 19.5196 17.7071 19.7071C17.5196 19.8946 17.2652 20 17 20ZM18 4H0V1C0 0.734784 0.105357 0.48043 0.292893 0.292893C0.48043 0.105357 0.734784 0 1 0H17C17.2652 0 17.5196 0.105357 17.7071 0.292893C17.8946 0.48043 18 0.734784 18 1V4ZM4 9V13H8V9H4ZM4 15V17H14V15H4ZM10 10V12H14V10H10Z"
-										fill="#9C99AD" />
-								</svg>
 							</div><a href="/discounts/index.html">Home</a>
 						</li>
 		
 					</ul>
 		
 					<ul class="services-list-app">
-						<li><a href="#">Netflix</a></li>
-						<li><a href="#">YouTube</a></li>
-						<li><a href="#">Spotify</a></li>
+						<li><a href="/discounts/netflix-service.html">Netflix</a></li>
+						<li><a href="/discounts/youtube-service.html">Youtube</a></li>
+						<li><a href="/discounts/spotify-service.html">Spotify</a></li>
 					</ul>
 		
-					<div class="LogInButton-app StartBtn"><a href="#"><span>Log in</span></a></div>
+					<div class="LogInButton-app StartBtn"><a href=""><span>Log in</span></a></div>
 		
 		
 					<div class="SignUpButton-app LearnMoreBtn"><a href=""><span>Sign Up</span></a></div>
@@ -121,8 +139,18 @@
 								</svg>
 							</a>
 						</div>
-		
-						<div class="FunctionsHeader__SpoilerLanguges">EN <img src="./img/arrow-down-s-line.svg" alt=""></div>
+						<!-- Для бургера -->
+						<!-- <div class="SpoilerLanguges-case">
+									<button class=" FunctionsHeader__SpoilerLanguges SpoilerLanguges-btn " onclick="show_spoilerLanguges()">
+										EN<img src="./img/arrow-down-s-line.svg" alt="arrow">
+									</button>
+								
+									<div id="spoilerLanguges-list" class="SpoilerLangugesList change-lang">
+										<option value="en">English</option>
+										<option value="ua">Ukraine</option>
+										<option value="ru">Russian</option>
+									</div>
+								</div> -->
 		
 		
 					</div>
@@ -148,9 +176,26 @@
 						</a>
 					</div>
 		
-					<div class="FunctionsHeader__SpoilerLanguges">EN <img src="./img/arrow-down-s-line.svg" alt=""></div>
+					<div class="SpoilerLanguges-case">
+						<button class=" FunctionsHeader__SpoilerLanguges SpoilerLanguges-btn " onclick="show_spoilerLanguges()">
+							EN
+						</button>
 		
-					<div class="LogInButton"><a href="#"><span>Log in</span></a></div>
+						<div id="spoilerLanguges-list" class="SpoilerLangugesList change-lang">
+							<option value="en">English</option>
+							<option value="ua">Ukraine</option>
+							<option value="ru">Russian</option>
+						</div>
+					</div>
+					<!-- <select class="change-lang FunctionsHeader__SpoilerLanguges">
+								<option value="en">EN</option>
+								<option value="ua">UA</option>
+								<option value="ru">RU</option>
+							</select> -->
+		
+		
+		
+					<div class="LogInButton"><a href=""><span>Log in</span></a></div>
 				</div>
 		
 				<div class="burger">
