--- a/youtube-service.html
+++ b/youtube-service.html
@@ -20,40 +20,40 @@
 		<header class="header">
 			<div class="header__body">
 				<a href="/discounts/index.html" class="header__logo">
-
+		
 					<img src="./img/Logo.png" alt="Logo">
 					<h2>DiscountsOnServices</h2>
-
+		
 				</a>
-
+		
 				<ul class="header__list">
-
+		
 					<div class="dropdown-case">
 						<button class="dropdownBtn" onclick="show_list()">
 							Subscriptions
 						</button>
-
+		
 						<div id="dropdown-list" class="dropdownList">
 							<a href="/discounts/netflix-service.html">Netflix</a>
 							<a href="/discounts/youtube-service.html">YouTube Premium</a>
 							<a href="/discounts/spotify-service.html">Spotify</a>
 						</div>
 					</div>
-
-
+		
+		
 					<li><a href="/discounts/faq-page.html">FAQ</a></li>
 					<li><a href="">Support</a></li>
 					<li><a href="">About</a></li>
 				</ul>
-
-
-
-
-
+		
+		
+		
+		
+		
 				<div class="header-list-app">
 					<ul class="navigation-list-app">
-
-
+		
+		
 						<li>
 							<div class="navigation-ico"><svg width="20" height="20" viewBox="0 0 18 20" fill="none"
 									xmlns="http://www.w3.org/2000/svg">
@@ -63,7 +63,7 @@
 								</svg>
 							</div><a href="">Support</a>
 						</li>
-
+		
 						<li>
 							<div class="navigation-ico"><svg width="20" height="20" viewBox="0 0 20 20" fill="none"
 									xmlns="http://www.w3.org/2000/svg">
@@ -73,7 +73,7 @@
 								</svg>
 							</div><a href="/discounts/faq-page.html">FAQ</a>
 						</li>
-
+		
 						<li>
 							<div class="navigation-ico"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
 									xmlns="http://www.w3.org/2000/svg">
@@ -88,10 +88,10 @@
 										</clipPath>
 									</defs>
 								</svg>
-
+		
 							</div><a href="">About</a>
 						</li>
-
+		
 						<li>
 							<div class="navigation-ico"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
 									xmlns="http://www.w3.org/2000/svg">
@@ -106,23 +106,23 @@
 										</clipPath>
 									</defs>
 								</svg>
-
+		
 							</div><a href="/discounts/index.html">Home</a>
 						</li>
-
+		
 					</ul>
-
+		
 					<ul class="services-list-app">
 						<li><a href="/discounts/netflix-service.html">Netflix</a></li>
 						<li><a href="/discounts/youtube-service.html">Youtube</a></li>
 						<li><a href="/discounts/spotify-service.html">Spotify</a></li>
 					</ul>
-
+		
 					<div class="LogInButton-app StartBtn"><a href=""><span>Log in</span></a></div>
-
-
+		
+		
 					<div class="SignUpButton-app LearnMoreBtn"><a href=""><span>Sign Up</span></a></div>
-
+		
 					<div class="header__FunctionsHeader FunctionsHeader FunctionsHeader-app">
 						<div class="FunctionsHeader__CallbackButtons">
 							<a href=""><svg width="26.67" height="26.67" viewBox="0 0 20 20" fill="none"
@@ -141,49 +141,46 @@
 						</div>
 						<!-- Для бургера -->
 						<!-- <div class="SpoilerLanguges-case">
-							<button class=" FunctionsHeader__SpoilerLanguges SpoilerLanguges-btn " onclick="show_spoilerLanguges()">
-								EN<img src="./img/arrow-down-s-line.svg" alt="arrow">
-							</button>
-						
-							<div id="spoilerLanguges-list" class="SpoilerLangugesList change-lang">
-								<option value="en">English</option>
-								<option value="ua">Ukraine</option>
-								<option value="ru">Russian</option>
-							</div>
-						</div> -->
-
-
+									<button class=" FunctionsHeader__SpoilerLanguges SpoilerLanguges-btn " onclick="show_spoilerLanguges()">
+										EN<img src="./img/arrow-down-s-line.svg" alt="arrow">
+									</button>
+								
+									<div id="spoilerLanguges-list" class="SpoilerLangugesList change-lang">
+										<option value="en">English</option>
+										<option value="ua">Ukraine</option>
+										<option value="ru">Russian</option>
+									</div>
+								</div> -->
+		
+		
 					</div>
-
+		
 				</div>
-
-
-
-
-
+		
+		
+		
+		
+		
 				<div class="header__FunctionsHeader FunctionsHeader">
 					<div class="FunctionsHeader__CallbackButtons">
-						<a href=""><svg width="20" height="20" viewBox="0 0 20 20" fill="none"
-								xmlns="http://www.w3.org/2000/svg">
+						<a href=""><svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<path
 									d="M0.00401338 20L1.35601 15.032C0.465151 13.5049 -0.00289063 11.768 1.34322e-05 10C1.34322e-05 4.477 4.47701 0 10 0C15.523 0 20 4.477 20 10C20 15.523 15.523 20 10 20C8.23279 20.0029 6.49667 19.5352 4.97001 18.645L0.00401338 20ZM6.39101 5.308C6.26188 5.31602 6.13569 5.35003 6.02001 5.408C5.91153 5.46943 5.81251 5.54622 5.72601 5.636C5.60601 5.749 5.53801 5.847 5.46501 5.942C5.09542 6.423 4.89662 7.01342 4.90001 7.62C4.90201 8.11 5.03001 8.587 5.23001 9.033C5.63901 9.935 6.31201 10.89 7.20101 11.775C7.41501 11.988 7.62401 12.202 7.84901 12.401C8.9524 13.3725 10.2673 14.073 11.689 14.447L12.258 14.534C12.443 14.544 12.628 14.53 12.814 14.521C13.1053 14.506 13.3896 14.4271 13.647 14.29C13.813 14.202 13.891 14.158 14.03 14.07C14.03 14.07 14.073 14.042 14.155 13.98C14.29 13.88 14.373 13.809 14.485 13.692C14.568 13.606 14.64 13.505 14.695 13.39C14.773 13.227 14.851 12.916 14.883 12.657C14.907 12.459 14.9 12.351 14.897 12.284C14.893 12.177 14.804 12.066 14.707 12.019L14.125 11.758C14.125 11.758 13.255 11.379 12.724 11.137C12.668 11.1126 12.608 11.0987 12.547 11.096C12.4786 11.089 12.4095 11.0967 12.3443 11.1186C12.2791 11.1405 12.2193 11.1761 12.169 11.223V11.221C12.164 11.221 12.097 11.278 11.374 12.154C11.3325 12.2098 11.2754 12.2519 11.2098 12.2751C11.1443 12.2982 11.0733 12.3013 11.006 12.284C10.9409 12.2666 10.877 12.2445 10.815 12.218C10.691 12.166 10.648 12.146 10.563 12.109L10.558 12.107C9.98592 11.8572 9.45624 11.5198 8.98801 11.107C8.86201 10.997 8.74501 10.877 8.62501 10.761C8.23159 10.3842 7.88873 9.95801 7.60501 9.493L7.54601 9.398C7.50364 9.33416 7.46937 9.2653 7.44401 9.193C7.40601 9.046 7.50501 8.928 7.50501 8.928C7.50501 8.928 7.74801 8.662 7.86101 8.518C7.9551 8.39832 8.04289 8.27382 8.12401 8.145C8.24201 7.955 8.27901 7.76 8.21701 7.609C7.93701 6.925 7.64701 6.244 7.34901 5.568C7.29001 5.434 7.11501 5.338 6.95601 5.319C6.90201 5.313 6.84801 5.307 6.79401 5.303C6.65972 5.29633 6.52515 5.29766 6.39101 5.307V5.308Z"
 									fill="#333333" />
 							</svg></a>
-						<a href=""><svg width="20" height="20" viewBox="0 0 20 20" fill="none"
-								xmlns="http://www.w3.org/2000/svg">
+						<a href=""><svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<path
 									d="M10 20C4.477 20 0 15.523 0 10C0 4.477 4.477 0 10 0C15.523 0 20 4.477 20 10C20 15.523 15.523 20 10 20ZM6.89 11.17L6.903 11.163L7.773 14.033C7.885 14.344 8.039 14.4 8.226 14.374C8.414 14.349 8.513 14.248 8.636 14.13L9.824 12.982L12.374 14.87C12.84 15.127 13.175 14.994 13.291 14.438L14.948 6.616C15.131 5.888 14.811 5.596 14.246 5.828L4.513 9.588C3.849 9.854 3.853 10.226 4.393 10.391L6.89 11.171V11.17Z"
 									fill="#333333" />
 							</svg>
 						</a>
 					</div>
-
+		
 					<div class="SpoilerLanguges-case">
-						<button class=" FunctionsHeader__SpoilerLanguges SpoilerLanguges-btn "
-							onclick="show_spoilerLanguges()">
+						<button class=" FunctionsHeader__SpoilerLanguges SpoilerLanguges-btn " onclick="show_spoilerLanguges()">
 							EN
 						</button>
-
+		
 						<div id="spoilerLanguges-list" class="SpoilerLangugesList change-lang">
 							<option value="en">English</option>
 							<option value="ua">Ukraine</option>
@@ -191,121 +188,56 @@
 						</div>
 					</div>
 					<!-- <select class="change-lang FunctionsHeader__SpoilerLanguges">
-						<option value="en">EN</option>
-						<option value="ua">UA</option>
-						<option value="ru">RU</option>
-					</select> -->
-
-
-
+								<option value="en">EN</option>
+								<option value="ua">UA</option>
+								<option value="ru">RU</option>
+							</select> -->
+		
+		
+		
 					<div class="LogInButton"><a href=""><span>Log in</span></a></div>
 				</div>
-
+		
 				<div class="burger">
 					<div class="burger__line-1"></div>
 					<div class="burger__line-2"></div>
 					<div class="burger__line-3"></div>
-
+		
 				</div>
-
+		
 			</div>
 		</header>
 
 		<main class="main">
 			<div class="container">
 
-				<!-- Начало использования ======================================-->
-				<section class="StartUsing AboutUs">
-					<div class="StartUsing__inner AboutUs__inner">
-						<div class="StartUsing__StartInfo StartInfo ">
-							<div class="StartInfo__title">Start enjoying a benefit
-								of up to <span>50%</span>
-							</div>
-							<div class="StartInfo__subtitle">You have always wanted to get the same product at a special price
-								for
-								you, without haggling - and it is yours.
-							</div>
-
-							<a class="StartBtn StartUseBtn" href=""><span>Start using</span></a>
-						</div>
-					</div>
-					<div class="StartUsing__Woman">
-						<img src="./img/StartWoman.png" alt="StartWoman">
-
-					</div>
-				</section>
-
-				<!-- Выбор подписки ===========================================-->
-				<section class="SectionMain ChooseSubscription">
-
-					<h2 class="SectionMain__title">Choose a subscription</h2>
-
-					<div class="SectionMain__body ChooseSubscription__body">
-
-
-						<div class="ChooseSubscription__ChooseSubscription-item ChooseSubscription-item">
-							<div class="ChooseSubscription-item__info ">
-								<div class="ChooseSubscription-item__title">Netflix subscription rates</div>
-								<div class="ChooseSubscription-item__subtitle">The constant contributes to the task of the same
-									and
-									thus the intended features and the set relation to the check and set also.</div>
-								<a href="" class="ChooseSubscription-item__btn LearnMoreBtn"><span>Learn more</span></a>
-							</div>
-							<div class="ChooseSubscription-item__preview"><img src="./img/IcoSubscription/Netflix.png" alt="">
-							</div>
-						</div>
-
-
-						<div class="ChooseSubscription__ChooseSubscription-item ChooseSubscription-item">
-							<div class="ChooseSubscription-item__info ">
-								<div class="ChooseSubscription-item__title">Netflix subscription rates</div>
-								<div class="ChooseSubscription-item__subtitle">The constant contributes to the task of the same
-									and
-									thus the intended features and the set relation to the check and set also.</div>
-								<a href="" class="ChooseSubscription-item__btn LearnMoreBtn"><span>Learn more</span></a>
-							</div>
-							<div class="ChooseSubscription-item__preview"><img src="./img/IcoSubscription/Spotify.png" alt="">
-							</div>
-						</div>
-
-
-						<div class="ChooseSubscription__ChooseSubscription-item ChooseSubscription-item">
-							<div class="ChooseSubscription-item__info ">
-								<div class="ChooseSubscription-item__title">Netflix subscription rates</div>
-								<div class="ChooseSubscription-item__subtitle">The constant contributes to the task of the same
-									and
-									thus the intended features and the set relation to the check and set also.</div>
-								<a href="" class="ChooseSubscription-item__btn LearnMoreBtn"><span>Learn more</span></a>
-							</div>
-							<div class="ChooseSubscription-item__preview"><img src="./img/IcoSubscription/Yotube.png" alt="">
-							</div>
-						</div>
-					</div>
-
-				</section>
 
 				<!-- Как это работает =========================================-->
-				<section class="SectionMain HowWorks">
-					<h2 class="SectionMain__title">How it works?</h2>
-					<div class="SectionMain__body HowWorks__body">
+				<section class="SectionMain HowWorks Service-page">
+					<h2 class="SectionMain__title Service-page__title">YouTube Premium</h2>
+					<h2 class="Service-page__subtitle">Select the subscription type for a period of <span>12 months:</span>
+					</h2>
 
-						<div class="HowWorks__item HowWorks-item">
-							<div class="HowWorks-item__title">Step 1</div>
-							<div class="HowWorks-item__subtitle">Enter your account information</div>
-							<div class="HowWorks-item__ico"><img src="./img/StepsWorks/01.png" alt="01"></div>
+					<div class="SectionMain__body HowWorks__body Service-page__body">
+
+						<div class="Service-page-item">
+							<div class="Service-page-item__title">Music</div>
+							<ul class="Service-page-item__list">
+								<li><img src="./img/service-item-ico.svg" alt="">Listen to music without ads, in the background
+									and offline</li>
+							</ul>
+							<div class="Service-page-item__cost"><span>$</span>60</div>
+							<a href="" class="Service-page-item__btn LearnMoreBtn"><span>Get started</span></a>
 						</div>
 
-						<div class="HowWorks__item HowWorks-item">
-							<div class="HowWorks-item__title">Step 2</div>
-							<div class="HowWorks-item__subtitle">Select the desired subscription and plan</div>
-							<div class="HowWorks-item__ico"><img src="./img/StepsWorks/02.png" alt="02"></div>
-						</div>
-
-						<div class="HowWorks__item HowWorks-item">
-							<div class="HowWorks-item__title">Step 3</div>
-							<div class="HowWorks-item__subtitle">Pay your bill
-								with PayPal</div>
-							<div class="HowWorks-item__ico"><img src="./img/StepsWorks/03.png" alt="03"></div>
+						<div class="Service-page-item">
+							<div class="Service-page-item__title">Premium</div>
+							<ul class="Service-page-item__list">
+								<li><img src="./img/service-item-ico.svg" alt="">YouTube and YouTube Music without ads, in the
+									background and offline</li>
+							</ul>
+							<div class="Service-page-item__cost"><span>$</span>80</div>
+							<a href="" class="Service-page-item__btn LearnMoreBtn"><span>Get started</span></a>
 						</div>
 
 					</div>
@@ -326,31 +258,7 @@
 
 				</section>
 
-				<!-- О нас ====================================================-->
-				<section class="AboutUs">
-					<h2 class="SectionMain__title">About Us</h2>
 
-					<div class="AboutUs__body">
-						<div class="StartUsing__StartInfo StartInfo AboutUsInfo">
-							<div class="AboutUsInfo__logo"><img src="./img/Logo2.png" alt="Logo">
-							</div>
-							<div class="StartInfo__subtitle AboutUs__subtitle">
-								<p>We offer you a subscription to various media services at the best price.</p>
-								<p>We have partnered with several companies to help you find the best prices for your media
-									subscriptions and provide you
-									with the best prices for the Premium subscriptions you want.</p>
-								<p>It's simple, fast and economical.</p>
-							</div>
-
-						</div>
-						<div class="StartUsing__Woman AboutUs__Woman">
-							<img src="./img/AboutWoman.png" alt="AboutWoman">
-
-						</div>
-					</div>
-
-
-				</section>
 
 				<!-- Вопросы и ответы =========================================-->
 				<section class="SectionMain FAQ">
@@ -410,17 +318,7 @@
 					</div>
 
 
-					<div class="HowWorks-invite ReaquestBlock">
-						<div class="HowWorks-invite__info ReaquestBlock__info">
-							<div class="HowWorks-invite__title ReaquestBlock__title">Request for an additional subscription
-								that was not found here</div>
-							<div class="HowWorks-invite__subtitle ReaquestBlock__subtitle">Disney, Amazon Prime, Microsoft
-								Office, Microsoft Windows</div>
-						</div>
 
-						<a class="ReaquestBlock__ClickBtn StartBtn"><span>Request</span></a>
-
-					</div>
 
 				</section>
 
