--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 								<div class="ChooseSubscription-item__subtitle">The constant contributes to the task of the same
 									and
 									thus the intended features and the set relation to the check and set also.</div>
-								<a href="" class="ChooseSubscription-item__btn LearnMoreBtn"><span>Learn more</span></a>
+								<a href="/discounts/netflix-service.html" class="ChooseSubscription-item__btn LearnMoreBtn"><span>Learn more</span></a>
 							</div>
 							<div class="ChooseSubscription-item__preview"><img src="./img/IcoSubscription/Netflix.png" alt="">
 							</div>
@@ -258,11 +258,11 @@
 
 						<div class="ChooseSubscription__ChooseSubscription-item ChooseSubscription-item">
 							<div class="ChooseSubscription-item__info ">
-								<div class="ChooseSubscription-item__title">Netflix subscription rates</div>
+								<div class="ChooseSubscription-item__title">Spotify Premium</div>
 								<div class="ChooseSubscription-item__subtitle">The constant contributes to the task of the same
 									and
 									thus the intended features and the set relation to the check and set also.</div>
-								<a href="" class="ChooseSubscription-item__btn LearnMoreBtn"><span>Learn more</span></a>
+								<a href="/discounts/spotify-service.html" class="ChooseSubscription-item__btn LearnMoreBtn"><span>Learn more</span></a>
 							</div>
 							<div class="ChooseSubscription-item__preview"><img src="./img/IcoSubscription/Spotify.png" alt="">
 							</div>
@@ -271,11 +271,11 @@
 
 						<div class="ChooseSubscription__ChooseSubscription-item ChooseSubscription-item">
 							<div class="ChooseSubscription-item__info ">
-								<div class="ChooseSubscription-item__title">Netflix subscription rates</div>
+								<div class="ChooseSubscription-item__title">YouTube Premium</div>
 								<div class="ChooseSubscription-item__subtitle">The constant contributes to the task of the same
 									and
 									thus the intended features and the set relation to the check and set also.</div>
-								<a href="" class="ChooseSubscription-item__btn LearnMoreBtn"><span>Learn more</span></a>
+								<a href="/discounts/youtube-service.html" class="ChooseSubscription-item__btn LearnMoreBtn"><span>Learn more</span></a>
 							</div>
 							<div class="ChooseSubscription-item__preview"><img src="./img/IcoSubscription/Yotube.png" alt="">
 							</div>
