--- a/faq-page.html
+++ b/faq-page.html
@@ -42,8 +42,8 @@
 		
 		
 					<li><a href="/discounts/faq-page.html">FAQ</a></li>
-					<li><a href="">Support</a></li>
-					<li><a href="">About</a></li>
+					<li><a href="/discounts/support-page.html">Support</a></li>
+					<li><a href="/discounts/about-page.html">About</a></li>
 				</ul>
 		
 		
@@ -61,7 +61,8 @@
 										d="M17 20H1C0.734784 20 0.48043 19.8946 0.292893 19.7071C0.105357 19.5196 0 19.2652 0 19V6H18V19C18 19.2652 17.8946 19.5196 17.7071 19.7071C17.5196 19.8946 17.2652 20 17 20ZM18 4H0V1C0 0.734784 0.105357 0.48043 0.292893 0.292893C0.48043 0.105357 0.734784 0 1 0H17C17.2652 0 17.5196 0.105357 17.7071 0.292893C17.8946 0.48043 18 0.734784 18 1V4ZM4 9V13H8V9H4ZM4 15V17H14V15H4ZM10 10V12H14V10H10Z"
 										fill="#9C99AD" />
 								</svg>
-							</div><a href="">Support</a>
+							</div>
+							<a href="/discounts/support-page.html">Support</a>
 						</li>
 		
 						<li>
@@ -89,7 +90,7 @@
 									</defs>
 								</svg>
 		
-							</div><a href="">About</a>
+							</div><a href="/discounts/support-page.html">About</a>
 						</li>
 		
 						<li>
@@ -195,7 +196,8 @@
 		
 		
 		
-					<div class="LogInButton"><a href=""><span>Log in</span></a></div>
+					<div class="LogInButton"><a href="https://www.figma.com/file/aqDFfWbmcB5KzMsXThLmEf/.?node-id=188%3A70"
+							target="_blank"><span>Log in</span></a></div>
 				</div>
 		
 				<div class="burger">
