--- a/support-page.html
+++ b/support-page.html
@@ -43,7 +43,7 @@
 		
 					<li><a href="/discounts/faq-page.html">FAQ</a></li>
 					<li><a href="/discounts/support-page.html">Support</a></li>
-					<li><a href="/discounts/about-page.html">About</a></li>
+					<li><a href="/discounts/support-page.html">About</a></li>
 				</ul>
 		
 		
