--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<link href="css/style.css" rel="stylesheet">
 	<link rel="icon" href="./img/Logo.ico" type="image/x-icon">
-	<link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+	<!-- <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon"> -->
 	<title>DiscountsOnServices</title>
 </head>
 
